# projeto-streamlite

./: README.md  cadastro.py  cliente.csv  pyproject.toml
pages/: consulta.py
