[tool.poetry]
name = "projeto-pratico"
version = "0.1.0"
description = ""
authors = ["walisson"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.37.0"
pandas = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
